# ai-lab-os

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  README.md  main.py  project_state.json  pyproject.toml  requirements.txt
.github/workflows/: quality-gate.yml
agents/: __init__.py  config.py  context.py  identity.py  lifecycle.py  memory.py  permission.py  protocol.py
agents/roles/: __init__.py  registry.py
agents/tools/: __init__.py  protocol.py  registry.py
api/: __init__.py  app.py  dependencies.py  models.py  responses.py
api/middleware/: context.py  error_handler.py  tracing.py
api/routes/: agenda.py  applications.py  brief.py  chat.py  decisions.py  health.py  inbox.py  knowledge.py  reminders.py  tasks.py  waiting_for.py  work_logs.py  workflows.py
applications/: __init__.py  config.py  events.py  exceptions.py  manifest.py  models.py  registry.py  runtime.py
applications/alpha_assistant/: README.md  application.py  manifest.yaml
benchmarks/: benchmark_memory.py  benchmark_provider.py
cli/: __init__.py  __main__.py  ceo.py  main.py  runtime.py
config/: .env.example  alpha.yaml  default.yaml  development.yaml  production.example.yaml
core/: __init__.py  _version.py  bootstrap.py  clock.py  config.py  lifecycle.py  logging.py  provider_mode.py  security.py  time_utils.py
core/bus/: bus.py  (+7 more)
deploy/: .dockerignore  Dockerfile  README.md  docker-compose.yml  healthcheck.py
knowledge/: __init__.py  config.py  ingestion.py  manager.py  permission.py  retrieval.py
product/: BUSINESS_WORKFLOWS.md  PRODUCT_ROADMAP.md  REQUIREMENTS.md  USE_CASES.md  VISION.md
scripts/: diagnose.bat  setup.bat  start.bat  start_api.bat  stop.bat
tests/: conftest.py  test_security.py
(+604 files in other folders)
