
[project]
name = "ai-lab"
version = "0.33.0"
description = "Personal AI Operating System"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
include = ["core*", "agents*", "knowledge*", "applications*", "workflows*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
