
[project]
name = "ai-lab"
version = "0.33.0"
description = "Personal AI Operating System"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tzdata>=2024.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
real = [
    "openai>=1.0",
]
knowledge = [
    "chromadb>=0.4",
    "sentence-transformers>=2.2",
]
test = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
build = [
    "build>=1.2",
    "twine>=5.0",
]
dev = [
    "mypy>=1.8",
    "ruff>=0.3",
]
local = [
    "build>=1.2",
    "fastapi>=0.110",
    "httpx>=0.27",
    "mypy>=1.8",
    "openai>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "twine>=5.0",
    "uvicorn>=0.29",
]

[tool.setuptools.packages.find]
include = [
    "agents*",
    "api*",
    "applications*",
    "cli*",
    "core*",
    "knowledge*",
    "workflows*",
]
exclude = ["tests*", "data*", "logs*", "runtime*", "chroma*"]

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"
